@@ -1,3 +1,13 @@
+commit 4828d1df8847a6639ce35afb2ec5110e07db4e44
+Author: J. R. Okajima <hooanon05@yahoo.co.jp>
+Date:   Tue Nov 1 15:20:10 2011 +0900
+
+    aufs: fix including 'types.h'
+    
+    /usr/include/sys/types.h (and others) may conflict with linux/types.h.
+    
+    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>
+
 commit 55fe18344125c6227697dca40f1d5ca1bd3b782c
 Author: J. R. Okajima <hooanon05@yahoo.co.jp>
 Date:   Sun Oct 23 10:52:03 2011 +0900
